<?xml version="1.0"?>
<package>
  <name>sample1</name>
  <version>0.1.1</version>
  <description>
    sample1 is a test code made for understanding Google Test.
  </description>
  <maintainer email="hoge@gmail.com">hoge</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/hoge</url>
  <!-- <url type="bugtracker">https://github.com/hoge</url> -->
  <!-- <url type="repository">https://github.com/hoge</url> -->
  <author>hoge</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <build_depend>libqt4-dev</build_depend> -->
  <!-- <build_depend>qt4-qmake</build_depend> -->
  <!-- <build_depend>rosconsole</build_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>roscpp_serialization</build_depend> -->
  <!-- <build_depend>roslib</build_depend> -->
  <!-- <build_depend>rostime</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_depend>std_srvs</build_depend> -->

  <!-- <run_depend>libqt4</run_depend> -->
  <!-- <run_depend>message_runtime</run_depend> -->
  <!-- <run_depend>rosconsole</run_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>roscpp_serialization</run_depend> -->
  <!-- <run_depend>roslib</run_depend> -->
  <!-- <run_depend>rostime</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->
  <!-- <run_depend>std_srvs</run_depend> -->
</package>
